--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ form {
     left: 900px;
     top: 1270px;
     display: none;
-    background-image: url();
+    background-color: #989898;
     background-repeat: none;
 }
 #pic1_left{
@@ -152,7 +152,7 @@ form {
     left: 515px;
     top: 1270px;
     display: none;
-    background-image: url();
+    background-color: #989898;
     background-repeat: none;
 }
 #p1{
