--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ form {
     top: 1270px;
     display: none;
     background-color: #989898;
+    color: #989898
     background-repeat: none;
 }
 #pic1_left{
@@ -153,6 +154,7 @@ form {
     top: 1270px;
     display: none;
     background-color: #989898;
+    color: #989898
     background-repeat: none;
 }
 #p1{
